<resources>
    <string name="app_name">LapitChat</string>
    <string name="create_new_account">Create new account?</string>
    <string name="display_name">Display name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_out">Log out</string>
    <string name="all_users">All users</string>
    <string name="setting">Setting</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="weclome_to_lapit_chat_app">Weclome to Lapit Chat App</string>
    <string name="need_a_new_account">Need a new account?</string>
    <string name="already_have_account">ALREADY HAVE ACCOUNT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_status">Hi there, I\'m using Lapit Chat App</string>
</resources>
